# gen/http/goa_snmp/kitserver/mount.go
@@ -1,46 +1,0 @@
-// Code generated by goa v3.2.6, DO NOT EDIT.
-//
-// goa-snmp go-kit HTTP server encoders and decoders
-//
-// Command:
-// $ goa gen github.com/rshade/goasnmp/design
-
-package server
-
-import (
-	"net/http"
-
-	goahttp "goa.design/goa/v3/http"
-)
-
-// MountListHandler configures the mux to serve the "goa-snmp" service "list"
-// endpoint.
-func MountListHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/hosts", f)
-}
-
-// MountAddHandler configures the mux to serve the "goa-snmp" service "add"
-// endpoint.
-func MountAddHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("POST", "/hosts/{Hostname}", f)
-}
-
-// MountGenHTTPOpenapiJSON configures the mux to serve GET request made to
-// "/openapi.json".
-func MountGenHTTPOpenapiJSON(mux goahttp.Muxer) {
-	mux.Handle("GET", "/openapi.json", http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		http.ServeFile(w, r, "./gen/http/openapi.json")
-	}))
-}
