# gen/http/goa_snmp/server/server.go
@@ -1,186 +1,0 @@
-// Code generated by goa v3.2.6, DO NOT EDIT.
-//
-// goa-snmp HTTP server
-//
-// Command:
-// $ goa gen github.com/rshade/goasnmp/design
-
-package server
-
-import (
-	"context"
-	"net/http"
-
-	"github.com/go-kit/kit/endpoint"
-	goasnmp "github.com/rshade/goasnmp/gen/goa_snmp"
-	goahttp "goa.design/goa/v3/http"
-	goa "goa.design/goa/v3/pkg"
-)
-
-// Server lists the goa-snmp service endpoint HTTP handlers.
-type Server struct {
-	Mounts []*MountPoint
-	List   http.Handler
-	Add    http.Handler
-}
-
-// ErrorNamer is an interface implemented by generated error structs that
-// exposes the name of the error as defined in the design.
-type ErrorNamer interface {
-	ErrorName() string
-}
-
-// MountPoint holds information about the mounted endpoints.
-type MountPoint struct {
-	// Method is the name of the service method served by the mounted HTTP handler.
-	Method string
-	// Verb is the HTTP method used to match requests to the mounted handler.
-	Verb string
-	// Pattern is the HTTP request path pattern used to match requests to the
-	// mounted handler.
-	Pattern string
-}
-
-// New instantiates HTTP handlers for all the goa-snmp service endpoints using
-// the provided encoder and decoder. The handlers are mounted on the given mux
-// using the HTTP verb and path defined in the design. errhandler is called
-// whenever a response fails to be encoded. formatter is used to format errors
-// returned by the service methods prior to encoding. Both errhandler and
-// formatter are optional and can be nil.
-func New(
-	e *goasnmp.Endpoints,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(err error) goahttp.Statuser,
-) *Server {
-	return &Server{
-		Mounts: []*MountPoint{
-			{"List", "GET", "/hosts"},
-			{"Add", "POST", "/hosts/{Hostname}"},
-			{"./gen/http/openapi.json", "GET", "/openapi.json"},
-		},
-		List: NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
-		Add:  NewAddHandler(e.Add, mux, decoder, encoder, errhandler, formatter),
-	}
-}
-
-// Service returns the name of the service served.
-func (s *Server) Service() string { return "goa-snmp" }
-
-// Use wraps the server handlers with the given middleware.
-func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.List = m(s.List)
-	s.Add = m(s.Add)
-}
-
-// Mount configures the mux to serve the goa-snmp endpoints.
-func Mount(mux goahttp.Muxer, h *Server) {
-	MountListHandler(mux, h.List)
-	MountAddHandler(mux, h.Add)
-	MountGenHTTPOpenapiJSON(mux, http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		http.ServeFile(w, r, "./gen/http/openapi.json")
-	}))
-}
-
-// MountListHandler configures the mux to serve the "goa-snmp" service "list"
-// endpoint.
-func MountListHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/hosts", f)
-}
-
-// NewListHandler creates a HTTP handler which loads the HTTP request and calls
-// the "goa-snmp" service "list" endpoint.
-func NewListHandler(
-	endpoint endpoint.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		encodeResponse = EncodeListResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "list")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "goa-snmp")
-		var err error
-		res, err := endpoint(ctx, nil)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
-
-// MountAddHandler configures the mux to serve the "goa-snmp" service "add"
-// endpoint.
-func MountAddHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("POST", "/hosts/{Hostname}", f)
-}
-
-// NewAddHandler creates a HTTP handler which loads the HTTP request and calls
-// the "goa-snmp" service "add" endpoint.
-func NewAddHandler(
-	endpoint endpoint.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeAddRequest(mux, decoder)
-		encodeResponse = EncodeAddResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "add")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "goa-snmp")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
-
-// MountGenHTTPOpenapiJSON configures the mux to serve GET request made to
-// "/openapi.json".
-func MountGenHTTPOpenapiJSON(mux goahttp.Muxer, h http.Handler) {
-	mux.Handle("GET", "/openapi.json", h.ServeHTTP)
-}
